--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -63,6 +63,28 @@ a:hover {
     outline-color: transparent;
 }
 
+.generate_btn {
+    color: white;
+    height: 40px;
+    width: 150px;
+    background-color: #002B5B;
+    border-color: #002B5B;
+    border-radius: 10px;
+    border: 0;
+    margin-bottom: 30px;
+}
+
+.generate_btn:hover {
+    background-color: #256D85;
+    color: #eee;
+}
+
+.generate_btn:focus {
+    background-color: #256D85;
+    color: #eee;
+    outline-color: transparent;
+}
+
 .box {
     box-shadow: #32325d40 0px 30px 60px -12px, #0000004d 0px 18px 36px -18px;
     padding: 20px;
